tests/ui/endpoint/dynamic_schema_missing_status_codes.stderr
error: `schema` and `status_codes` may only be used together
  --> tests/ui/endpoint/dynamic_schema_missing_status_codes.rs:15:21
   |
15 | #[read_all(schema = "schema")]
   |                     ^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/dynamic_schema_missing_status_codes.rs:7:10
  |
7 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Resource` (in Nightly builds, run with -Z macro-backtrace for more info)
